# tynd

./: .editorconfig  .gitattributes  .gitignore  .release-please-manifest.json  ALTERNATIVES.md  API.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  FRAMEWORKS.md  GETTING_STARTED.md  LICENSE  NOTICE  README.md  RUNTIMES.md  SIGNING.md  TROUBLESHOOTING.md  biome.json  package.json  release-please-config.json  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json
.github/workflows/: build-host.yml  ci.yml  deploy-docs.yml  release-please.yml
benchmarks/: README.md  package.json  run.ts  tsconfig.json
benchmarks/core/: index.html  package.json  tsconfig.json  vite.config.ts
benchmarks/core/backend/: main.ts
benchmarks/core/src/: main.ts
benchmarks/full/: package.json  vite.config.ts  vorn.config.ts
benchmarks/lite/: package.json  tsconfig.json  vite.config.ts  vorn.config.ts
benchmarks/results/: full.json  lite.json
docs/: .gitignore  README.md  next.config.ts  package.json  runtimes.md  wrangler.jsonc
docs/public/: _headers  _redirects  llms-full.txt  llms.txt
docs/public/docs/: llms-full.txt  llms.txt
docs/public/docs/v0.1/: llms-full.txt  llms.txt
docs/public/docs/v0.2/: llms.txt
docs/public/docs/v0.3/: llms-full.txt  llms.txt
docs/scripts/: build-llms-txt.ts  check-links.ts  new-version.ts
docs/src/: mdx-components.tsx
docs/src/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
docs/src/app/blog/: page.tsx
docs/src/app/changelog/: page.tsx
docs/src/app/compare/: page.tsx
docs/src/app/docs/: layout.tsx
docs/src/app/docs/[[...mdxPath]]/: page.tsx
docs/src/app/showcase/: page.tsx
docs/src/components/: LlmsLinksFix.tsx  RedirectToLatest.tsx  VersionPicker.tsx
docs/src/components/mdx/: cards.tsx  index.tsx
docs/src/components/ui/: Button.tsx  Container.tsx  FeatureCard.tsx  Page.tsx  SectionTitle.tsx  SiteFooter.tsx  SiteHeader.tsx  ThemeProvider.tsx  ThemeToggle.tsx  index.ts
docs/src/content/: _meta.ts  index.mdx
docs/src/content/blog/: .gitkeep
docs/src/content/showcase/: .gitkeep
docs/src/content/v0.1/: _meta.ts  faq.mdx  index.mdx  production-checklist.mdx  runtimes.mdx  troubleshooting.mdx
docs/src/content/v0.1/api/: _meta.ts  backend.mdx  index.mdx  streaming-rpc.mdx
docs/src/content/v0.1/cli/: build.mdx  clean.mdx  config.mdx  create.mdx  dev.mdx  index.mdx  info.mdx  init.mdx  keygen.mdx  sign.mdx  start.mdx  upgrade.mdx  validate.mdx
docs/src/content/v0.1/compare/: index.mdx  vs-electron.mdx  vs-tauri.mdx  vs-wails.mdx
docs/src/content/v0.1/concepts/: _meta.ts  architecture.mdx  build-pipeline.mdx  ipc.mdx  runtimes.mdx  security.mdx  tyndpkg.mdx
docs/src/content/v0.1/getting-started/: dev-workflow.mdx  first-app.mdx  index.mdx  installation.mdx  project-structure.mdx
docs/src/content/v0.1/guides/: accessibility.mdx  auto-updates.mdx  backend-rpc.mdx  binary-data.mdx  bundling.mdx  code-signing.mdx  debugging.mdx  deep-linking.mdx  frontend-frameworks.mdx  i18n.mdx  icons-branding.mdx  index.mdx  keyboard-shortcuts.mdx  migrate-from-electron.mdx  migrate-from-tauri.mdx  multi-window.mdx  performance.mdx  persistence.mdx  sidecars.mdx  single-instance.mdx  streaming.mdx  testing.mdx
docs/src/content/v0.1/recipes/: confirm-before-quit.mdx  copy-to-clipboard.mdx  dark-mode-sync.mdx  detect-online.mdx  embed-sidecar.mdx  handle-deep-link.mdx  index.mdx  launch-on-boot.mdx  minimize-to-tray.mdx  progress-download.mdx  remember-window-size.mdx  run-shell-command.mdx  single-instance-argv.mdx
docs/src/content/v0.1/tutorials/: chat-client.mdx  file-browser.mdx  index.mdx  markdown-editor.mdx
docs/src/content/v0.2/: _meta.ts  faq.mdx  index.mdx  production-checklist.mdx  runtimes.mdx  troubleshooting.mdx
docs/src/content/v0.2/api/: backend.mdx  index.mdx  streaming-rpc.mdx
docs/src/content/v0.2/cli/: build.mdx  clean.mdx  config.mdx  create.mdx  dev.mdx  index.mdx  info.mdx  init.mdx  keygen.mdx  sign.mdx  start.mdx  upgrade.mdx  validate.mdx
docs/src/content/v0.2/compare/: _meta.ts  index.mdx  vs-electron.mdx  vs-tauri.mdx  vs-wails.mdx
docs/src/content/v0.2/concepts/: architecture.mdx  build-pipeline.mdx  ipc.mdx  runtimes.mdx  security.mdx  tyndpkg.mdx
docs/src/content/v0.2/getting-started/: _meta.ts  dev-workflow.mdx  first-app.mdx  index.mdx  installation.mdx  project-structure.mdx
docs/src/content/v0.2/guides/: accessibility.mdx  auto-updates.mdx  backend-rpc.mdx  binary-data.mdx  bundling.mdx  code-signing.mdx  debugging.mdx  i18n.mdx  (+14 more)
docs/src/content/v0.3/: _meta.ts  faq.mdx  glossary.mdx  index.mdx  production-checklist.mdx  runtimes.mdx  troubleshooting.mdx
docs/src/lib/: nav.ts  site.ts  versions.ts
examples/react-app/: bunview.config.ts  package.json  tsconfig.app.json
examples/react-app/.bunview-tmp/icons/: app.icns
examples/react-app/backend/: commands.ts  internal.ts  main.ts  tsconfig.json
examples/react-app/src/: App.tsx
playground/example/: .gitignore  README.md  index.html  package.json  tynd.config.ts
playground/example/backend/: main.ts
playground/full/: README.md  index.html  package.json  tynd.config.ts  vorn.config.ts
playground/full/backend/: main.ts
playground/full/src/: App.css  App.tsx  api.ts  index.css  types.ts
playground/full/src/components/: ChatHeader.tsx  ChatInput.tsx  Message.tsx  MessageList.tsx  ModelSelect.tsx  PortInput.tsx  StatusDot.tsx
playground/full/src/hooks/: useChat.ts  useModels.ts  usePersistedModel.ts  usePersistedPort.ts  useServerStatus.ts
playground/lite/: .gitignore  README.md  package.json  tsconfig.app.json  tynd.config.ts  vorn.config.ts
playground/lite/backend/: main.ts
playground/lite/src/: App.tsx
playground/react-full/: .gitignore  README.md  index.html  package.json  vorn.config.ts
playground/react-full/backend/: main.ts
playground/react-full/src/: App.tsx
playground/react-lite/: .gitignore  README.md  index.html  package.json  vorn.config.ts
playground/react-lite/backend/: bundle.js  main.ts
scripts/: verify-build.ts
(+179 files in other folders)
