[workspace]
members  = ["packages/host-rs", "packages/full", "packages/lite"]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.83"
license       = "Apache-2.0"
repository    = "https://github.com/kvnpetit/tynd"
homepage      = "https://tynd.kvnpetit.com/"
documentation = "https://tynd.kvnpetit.com/docs"
authors       = ["Kevin Petit <74395438+kvnpetit@users.noreply.github.com>"]
keywords      = ["desktop", "webview", "typescript", "bun", "gui"]
categories    = ["gui", "web-programming"]
readme        = "../../README.md"

[workspace.dependencies]
# Shared foundations
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"
tempfile    = "3.27"
dirs        = "6"
zstd        = { version = "0.13.3", default-features = false }
mimalloc    = { version = "0.1.48", default-features = false }

# wry / tao ecosystem
wry         = "0.55.0"
tao         = "0.35.0"
muda        = "0.17.2"
tray-icon   = "0.22"

# OS integration
rfd         = "0.17.2"
arboard     = "3.6.1"
open        = { version = "5.3.3", features = ["shellexecute-on-windows"] }
pollster    = "0.4"
notify-rust = "4.15.0"
image       = { version = "0.25.10", default-features = false, features = ["png", "ico", "bmp"] }

# Embedded JS runtime (lite)
rquickjs    = { version = "0.11.0", features = ["full"] }

# HTTP + binary encoding. `json` dropped — we parse via serde_json directly.
ureq   = { version = "2.12", default-features = false, features = ["tls", "gzip", "brotli"] }
base64 = "0.22"

# Cross-platform pseudo-terminal for the embedded terminal API
portable-pty = "0.9"

# Compute helpers
sha2   = { version = "0.10", default-features = false }
blake3 = { version = "1.5", default-features = false }
hmac   = { version = "0.12", default-features = false }

# Ed25519 signatures for the auto-updater manifest + binary integrity.
ed25519-dalek = { version = "2.2", default-features = false, features = ["std"] }

# Single-instance lock across OSes
single-instance = "0.3"
# Cross-platform local socket for forwarding argv/cwd from a 2nd launch
# to the 1st (Windows named pipe, Unix domain socket).
interprocess = "2.2"

# FS watcher (ReadDirectoryChangesW on Windows, FSEvents on macOS, inotify
# on Linux) + global hotkey manager for system-wide shortcuts.
notify        = "6.1"
global-hotkey = "0.5"
# Cross-platform recycle bin (IShellItem on Windows, NSFileManager trashItemAtURL
# on macOS, freedesktop.org Trash Spec on Linux).
trash         = "5"
# User idle time — GetLastInputInfo (Win), CGEventSource (macOS), XScreenSaver (Linux).
user-idle     = "0.6"

# Launch-at-boot — registry on Windows, Launch Agents on macOS, autostart
# .desktop on Linux.
auto-launch = "0.5"

# Secure credential storage — Keychain (macOS), Credential Manager + DPAPI
# (Windows), Secret Service / kwallet (Linux).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# CSPRNG + WebSocket + embedded SQL (lite parity with bun:sqlite)
rand       = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
rusqlite   = { version = "0.32", features = ["bundled"] }

# Performance primitives
parking_lot = "0.12"   # lock-free fast path + no poison handling (saves a branch per lock)
dashmap     = "6"      # shard-locked concurrent hashmap — drops Mutex<HashMap> contention
ahash       = "0.8"    # faster non-crypto hasher for small keys (sessions, routes)

[workspace.lints.rust]
unused_must_use               = "deny"
unsafe_op_in_unsafe_fn        = "deny"
missing_debug_implementations = "warn"
unreachable_pub               = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"
rust_2018_idioms              = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pragmatic allows on top of pedantic — noise without real safety gain
module_name_repetitions  = "allow"
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_precision_loss      = "allow"
cast_lossless            = "allow"
similar_names            = "allow"
too_many_lines           = "allow"
doc_markdown             = "allow"

# Bug-catchers — real safety gains
dbg_macro           = "warn"
todo                = "warn"
unimplemented       = "warn"
panic_in_result_fn  = "warn"
mem_forget          = "warn"
lossy_float_literal = "warn"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false
incremental   = false

[profile.dev]
opt-level = 0

# Build deps with light opt so debug iteration stays fast without tanking runtime speed
[profile.dev.package."*"]
opt-level = 1
